kubernetes/mealie/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  ports:
  - name: 9000-9000
    nodePort: 30000
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: mealie
  type: NodePort
status:
  loadBalancer: {}
