kubernetes/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  ports:
  - name: 9000-9000
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: mealie
  type: ClusterIP
status:
  loadBalancer: {}
