kubernetes/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: mealie
  namespace: mealie
spec:
  defaultBackend:
    service:
      name: mealie
      port:
        number: 9000
status:
  loadBalancer: {}
#the ingress resource is watched by the ingress controller
